<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">联通兴业卡</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="loading">加载中\u2026</string>
    <string name="login_title">登陆</string>
    <string name="register_title">注册</string>
    
    <string name="hint_login_account">邮箱/手机号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_register_phone">请输入手机号</string>
    <string name="hint_register_office_phone">请输入办公电话</string>
    <string name="hint_register_name">用户真实姓名</string>
    <string name="hint_register_email">请输入常用邮箱</string>
    <string name="hint_register_qq">请输入qq号</string>
    <string name="hint_find_pwd_account">请输入注册邮箱</string>
    <string name="hint_edit_old_password">当前密码</string>
    <string name="hint_edit_new_password">新密码</string>  
    <string name="hint_edit_new_password1">新密码确认</string>  
    <string name="hint_card_num">请输入问题卡数量</string>
    <string name="hint_card_no">请输入问题卡号</string>
    <string name="hint_complaint_content">请输入投诉内容</string>
    <string name="hint_requirements_content">请输入需求内容</string>
    <string name="hint_inside_content">请输入内部工单内容</string>
    <string name="hint_service_addr">请输入服务器网址</string>
      
    <string name="lab_account">账户名</string>
    <string name="lab_password">密码</string>
    <string name="lab_username">用户姓名</string>
    <string name="lab_email">邮箱</string>
    <string name="lab_phone">手机</string>
    <string name="lab_office_tel">电话</string>
    <string name="lab_qq">QQ</string>
    <string name="lab_unit1">一级部门</string>
    <string name="lab_unit2">二级部门</string>
    <string name="lab_unit3">三级部门</string>
    <string name="lab_role">角 色</string>
    <string name="lab_loading_data">数据加载中,请稍候\u2026</string>
    <string name="lab_logining">正在登陆\u2026</string>
    <string name="lab_registering">正在注册\u2026</string>
    <string name="lab_rem_password">记住密码</string>
    <string name="lab_forgot_password">忘记密码?</string>
    <string name="lab_find_pwd">找回密码</string>
    <string name="lab_login_success">登陆成功</string>
    <string name="lab_login_error1">用户名或密码为空</string>
    <string name="lab_login_error2">网络出错</string>
    <string name="lab_edit_person_info">修改个人资料</string>
    <string name="lab_info_first">信息首页</string>
    <string name="lab_busi_info">业务信息</string>
    <string name="lab_quality_report">质量通报</string>
    <string name="lab_common_fault">常见故障</string>
    <string name="lab_register_error1">用户姓名不能为空</string>
    <string name="lab_register_error2">邮箱格式不正确</string>
    <string name="lab_register_error3">手机格式不正确</string> 
    <string name="lab_register_error4">一级或二级部门为必选项</string>
    <string name="lab_register_error5">角色为必选项</string>    
    <string name="lab_edit_password">修改密码</string>
    <string name="lab_info_tip">信息提示</string>
    <string name="lab_info_msg">确认要退出该账号吗?</string>
    <string name="lab_file_download">文件下载</string>
    <string name="lab_info_detail">信息详情</string>
    <string name="lab_card_num">问题卡数量</string>
    <string name="lab_card_no">问题卡号</string>
    <string name="lab_complaint_content">投诉内容</string>
    <string name="lab_worklist_type">工单类型</string>
    <string name="lab_create_worklist">创建投诉工单</string>
    <string name="lab_requirement_worklist">创建需求工单</string>
    <string name="lab_inside_worklist">创建内部工单</string>
    <string name="lab_attachment">附件</string>
    
    <string name="lab_service_addr">服务器网址</string>
    <string name="lab_service_setting">服务器设置</string>
    <string name="lab_setting">设置</string>
    <string name="lab_tip">温馨提示:</string>
    <string name="lab_tip_content">请正确的设置服务器地址,否则您无法正常使用该应用\n 如:http://10.4.126.145:8080/cas/</string> 
    <string name="btn_login">登   陆</string>
    <string name="btn_register">注   册</string>
    <string name="btn_submit">确认</string>
    <string name="btn_exit">退出</string>
    <string name="btn_close">关闭</string>
    <string name="btn_edit">确认修改</string>
    <string name="btn_complaint_submit">提交</string>   
</resources>
