<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_login_navbar"
        layout="@layout/layout_top_bar"/>

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_login_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_editbox_height"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_editbox_selector"
            android:hint="@string/hint_login_account"
            android:inputType="text"
            android:paddingLeft="65dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lab_login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_login_account"
            android:layout_alignLeft="@+id/edit_login_account"
            android:layout_alignTop="@+id/edit_login_account"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/lab_account"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_editbox_height"
            android:layout_below="@+id/edit_login_account"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_editbox_selector"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:paddingLeft="65dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lab_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_login_password"
            android:layout_alignLeft="@+id/edit_login_password"
            android:layout_alignTop="@+id/edit_login_password"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/lab_password"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/rem_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_login_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="@string/lab_rem_password"
            android:button="@drawable/checkbox_bg_select"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_editbox_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_red_bg"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_editbox_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_register_bg"
        android:text="@string/btn_register" />
	<TextView 
	    android:id="@+id/txt_forgot_password"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="13dp"
	    android:onClick="forgot_pwd"
	    android:textSize="@dimen/login_forgot_pwd_size"
	    android:text="@string/lab_forgot_password"/>
</LinearLayout>