<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/lab_service_addr"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/register_editbox_height"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/lab_service_addr" />

    <EditText
        android:id="@+id/edit_service_addr"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_editbox_height"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/lab_service_addr"
        android:background="@drawable/common_editbox_selector"
        android:hint="@string/hint_service_addr"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lab_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lab_service_addr"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/lab_tip"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/lab_tip_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_service_addr"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/lab_tip"
        android:text="@string/lab_tip_content" />

</RelativeLayout>