<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_card_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_editbox_height"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_editbox_selector"
            android:hint="@string/hint_card_num"
            android:inputType="number"
            android:paddingLeft="68dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lab_card_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_card_num"
            android:layout_alignLeft="@+id/edit_card_num"
            android:layout_alignTop="@+id/edit_card_num"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/lab_card_num"
            android:textAlignment="gravity"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_card_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_editbox_height"
            android:layout_below="@+id/edit_card_num"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_editbox_selector"
            android:hint="@string/hint_card_no"
            android:paddingLeft="68dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lab_card_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_card_no"
            android:layout_alignLeft="@+id/edit_card_no"
            android:layout_alignTop="@+id/edit_card_no"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/lab_card_no"
            android:textAlignment="gravity"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_complaint_content"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/edit_card_no"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_editbox_selector"
            android:gravity="left|top"
            android:hint="@string/hint_complaint_content"
            android:paddingLeft="10dp"
            android:singleLine="false"
            android:textSize="14sp" />
       	 <Button 
       	     android:id="@+id/btn_worklist_type"
       	     android:layout_width="match_parent"
       	     android:layout_height="@dimen/register_editbox_height"
       	     android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:background="@drawable/btn_light_blue_bg"
             android:layout_below="@+id/edit_complaint_content"
             android:drawableRight="@drawable/common_icon_arrow_right"
             android:paddingRight="10dp"
             android:layout_marginTop="3dp"
             android:gravity="left|center_vertical"
             android:text="@string/lab_worklist_type"
       	     />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_complaint_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_red_bg"
        android:text="@string/btn_complaint_submit" />

</LinearLayout>