<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_edit_password_navbar"
        layout="@layout/layout_top_bar" />

    <RelativeLayout
        android:id="@+id/layout_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_old_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_editbox_selector"
            android:inputType="textPassword"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:hint="@string/hint_edit_old_password" />

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edit_old_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_editbox_selector"
            android:inputType="textPassword"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:textSize="16sp" 
            android:hint="@string/hint_edit_new_password"/>

        <EditText
            android:id="@+id/edit_new_password1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edit_new_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_editbox_selector"
            android:inputType="textPassword"
            android:paddingLeft="3dp"
            android:singleLine="true"
            android:textSize="16sp" 
            android:hint="@string/hint_edit_new_password1"/>
    </RelativeLayout>
	
    <Button
        android:id="@+id/btn_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_white_gray_bg"
        android:text="@string/btn_edit" />
</LinearLayout>