<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/edit_requirements_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_editbox_selector"
        android:gravity="left|top"
        android:hint="@string/hint_requirements_content"
        android:paddingLeft="10dp"
        android:singleLine="false"
        android:textSize="14sp" />
   <TextView android:id="@+id/lab_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_attachment"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
	<ImageView 
	    android:id="@+id/img_attachment"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/cam_photo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
	    />
    <Button
        android:id="@+id/btn_requirements_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_red_bg"
        android:text="@string/btn_complaint_submit" />

</LinearLayout>
</ScrollView>